crates/ruff_python_formatter/tests/snapshots/black_compatibility@miscellaneous__blackd_diff.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input

```python
def abc ():
    return ["hello", "world",
            "!"]

print(   "Incorrect formatting"    
)
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,6 +1,5 @@
-def abc ():
-    return ["hello", "world",
-            "!"]
+def abc():
+    return ["hello", "world", "!"]
 
-print(   "Incorrect formatting"    
-)
+
+print("Incorrect formatting")
```

## Ruff Output

```python
def abc():
    return ["hello", "world", "!"]


print("Incorrect formatting")
```

## Black Output

```python
def abc ():
    return ["hello", "world",
            "!"]

print(   "Incorrect formatting"    
)
```
