crates/ruff_python_formatter/tests/snapshots/black_compatibility@miscellaneous__power_op_newline.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/miscellaneous/power_op_newline.py
---
## Input

```python
importA;()<<0**0#
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,6 +1,2 @@
 importA
-(
-    ()
-    << 0
-    ** 0
-)  #
+() << 0**0  #
```

## Ruff Output

```python
importA
() << 0**0  #
```

## Black Output

```python
importA
(
    ()
    << 0
    ** 0
)  #
```


